@@ -4,10 +4,13 @@
 * Added support for configuration via YAML files, environment variables and system properties based on Eclipse Microprofile config mechanism
 * Added support for plugin provisioning based on a given configuration via Maven repositories (including dependency resolution)
 * Removed deprecated source locations from XML report
+* Added message during analysis for concepts which are skipped because they have already been applied in a previous execution.
 * Fixed an issue where diagram reports (e.g. GraphML) failed with an exception (`"Element type not supported:"`)
 * Upgrade to PlantUML 1.2022.2 and JRuby 9.2.20.1
 * Add support for Elk layout mechanism for use in PlantUML diagrams
 * Added a module `test` providing core test infrastructure for plugins. Matchers located in the `test-jar` artifacts of `store` and `analysis` have been moved to this module, as well as `com.buschmais.jqassistant.core.test.plugin.AbstractPluginIT`.
++
+NOTE: Plugins must declare `com.buschmais.jqassistant.core:test`as dependency (test-scoped).
 
 == 1.11.1
 * Fixed a problem with embedded PlantUML rules having `requiredConcepts` specified but not evaluated
